[metadata]
name = wistia-client
version = 1.0.0
author = Felipe Nardi Batista
author_email = nardi@brickabode.com
description = A small and simple wrapper client for Wistia API
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
